# nbt-to-json

./: .eslintrc.cjs  README.md  deploy.sh  index.html  package.json  vite.config.ts
assets/: crate_bg.wasm  index-37a875f3.js  index-76d3d33f.js  index-deee2102.js  index-eb27763b.css
crate/: Cargo.toml
crate/assets/: example.nbt
crate/src/: lib.rs  main.rs  read.rs
crate/tests/: example_test.rs
src/: JsonView.css  JsonView.tsx  index.css  main.tsx
